--- a/package.json
+++ b/package.json
@@ -1,43 +1,57 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.32",
-    "@types/react": "^18.2.6",
+  "name": "chrisblog.github.io",
+  "version": "1.0.0",
+  "description": "chris's blog",
+  "main": "src/index.tsx",
+  "scripts": {
+    "test": "npm run test",
+    "build:dev": "node --max_old_space_size=4092 node_modules/webpack/bin/webpack.js --config webpack.config.js --mode development",
+    "server:dev": "webpack serve --mode=development"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chnt1blue/chrisblog.github.io.git"
+  },
+  "keywords": [
+    "blog"
+  ],
+  "author": "chris.chen",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/chnt1blue/chrisblog.github.io/issues"
+  },
+  "homepage": "https://github.com/chnt1blue/chrisblog.github.io#readme",
+  "devDependencies": {
+    "@types/lodash": "^4.14.195",
+    "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@types/react-router-dom": "5.1.3",
+    "@typescript-eslint/parser": "^5.59.8",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.41.0",
+    "html-webpack-plugin": "^5.5.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.1",
+    "lodash": "^4.17.21",
+    "markdown-loader": "^8.0.0",
+    "prettier": "^2.8.8",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.0.4",
+    "webpack": "^5.84.1",
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0"
+  },
+  "dependencies": {
+    "antd": "^5.5.2",
+    "axios": "^1.4.0",
+    "html-loader": "^4.2.0",
+    "markdown-navbar": "^1.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react-markdown": "^8.0.7",
+    "react-router-dom": "5.1.2",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1"
   }
 }
