--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "outDir": "./dist",
+    "target": "es5", // 指定编译到的 es 版本 es5
+    "module": "es6", // 指定编译到的模块系统 es6
+    "strict": true, // 使用严格类型检查
+    "allowJs": true, // 允许使用 js 语法
+    "jsx": "react", // 指定 jsx 语法 react
+    "allowSyntheticDefaultImports": true, // 允许使用类似 import React from 'react' 的语法
+    "moduleResolution": "node"
   },
-  "include": [
-    "src"
+  "include": ["**/*"],  // 包含全部文件
+  "exclude": [
+    "node_modules"
   ]
 }
