--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,16 @@
     "allowJs": true, // 允许使用 js 语法
     "jsx": "react", // 指定 jsx 语法 react
     "allowSyntheticDefaultImports": true, // 允许使用类似 import React from 'react' 的语法
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "strictNullChecks": true,
+    "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "noImplicitAny": true,
+    "declaration": true,
+    "lib": ["dom", "es7"],
   },
-  "include": ["**/*"],  // 包含全部文件
   "exclude": [
     "node_modules"
   ]
